--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
     "bootstrap": "^5.2.3",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
-    "next": "13.1.2",
+    "next": "^13.1.2",
     "next-seo": "^5.15.0",
     "next-sitemap": "^3.1.45",
     "nextjs-progressbar": "^0.0.16",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-animated-slider": "^2.0.0",
     "react-bootstrap": "^2.7.0",
     "react-collapsible": "^2.10.0",
     "react-countup": "^6.4.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-gtm-module": "^2.0.11",
     "react-headless-accordion": "^1.0.2",
     "react-icons": "^4.7.1",
